syntax = "proto3";

option java_package = "com.grpcserver";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


service ClientGuest{

    rpc findAllByFilter(ClientGuestRequestOutput) returns ( stream ClientGuestrList);
    rpc insert(ClientGuestRequest) returns(APIResponse);
    rpc findAll(google.protobuf.Empty) returns(stream ClientGuestRequest);
    rpc deleteById(ClientGuestRequest) returns(APIResponse);
    rpc findById(google.protobuf.Int32Value) returns(ClientGuestRequest);
    rpc update(ClientGuestRequest) returns(APIResponse);
    
 
}

message Empty {}

message ClientGuestRequest{

       int32 client_guest_id = 1;
       string  client_guest_name = 2;
       string  client_guest_email = 3;
}

message ClientGuestRequestOutput{

    int32 client_guest_id = 1;
    string  client_guest_name = 2;
    string  client_guest_email = 3;
}

message ClientGuestrList {
     repeated ClientGuestRequest clientguestall = 1;
    
}


message APIResponse{
      string responsemessage = 1;
      int32  responseCode  = 2;
}

